Acknowledgement/Credit & README.md update

--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
+#Acknowledgment: This file is created with the help of Internet
 # Follow symbolic links in this directory.
 Options +FollowSymLinks
 
